--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,25 +7,34 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".home_screen">
+        <activity android:name=".home_screen"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".pve_options"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:label="Player versus Computer Options"
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
         <activity android:name=".game_screen"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:label="Game Screen"
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
         <activity android:name=".fp_boardSetup"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:label="Free Play Board Setup"
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
         <activity android:name=".fp_options"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:label="Free Play Computer Options"
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
     </application>
-
 
 </manifest>
