Things done: 1)Completed pve_options test 2)Created and completed fp_options test 3)Created and completed fp_board_setup test 4)Created and completed game_screen test 5)Fixed error in fp_board_setup regarding # of pieces 6)Changed playerColor string from Color to PlayerColor 7)Fixed setDescription so that empty tiles dont have a content description with unnecesary blnk space 8)Tested voice activation functionality(still not implemented) 9)Added contentDescription to Start game button 10)Changed id of logo button so that it reflecs the current activity 11)Made various changes to fp_options id's 12)Added necesarry dependancies to gradel for AccesibilityCheck

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
     // Set this dependency to use intents
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
+    // Set this dependency to use Accesibility Checks
+    androidTestCompile ('com.android.support.test.espresso:espresso-contrib:2.2'){ exclude module: 'support-annotations' exclude module: 'support-v4' exclude module: 'support-v13' exclude module: 'recyclerview-v7' }
 }
