--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile files('libs/Chesspresso-lib.jar')
     testCompile 'junit:junit:4.12'
     //testCompile "org.robolectric:robolectric:3.0"
     compile 'com.android.support:appcompat-v7:23.1.1'
@@ -36,5 +37,7 @@ dependencies {
     // Set this dependency to use intents
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
     // Set this dependency to use Accesibility Checks
-    androidTestCompile ('com.android.support.test.espresso:espresso-contrib:2.2'){ exclude module: 'support-annotations' exclude module: 'support-v4' exclude module: 'support-v13' exclude module: 'recyclerview-v7' }
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2') {
+        exclude module: 'support-annotations' exclude module: 'support-v4' exclude module: 'support-v13' exclude module: 'recyclerview-v7'
+    }
 }
